# httpi

./: .gitignore  CMakeLists.txt  FindHttpi.cmake  LICENSE.md  README.md  httpiConfig.cmake.in
.github/workflows/: ci-macos.yml  ci.yml  ci_centos.yml  ci_cpu-ppc64le.yml  ci_cpu-s390x.yml  ci_cpu.yml  release.yml
cmake/: FindEvents.cmake
docs/: _config.yml  read_docs_config.yml
docs_civetweb_libhttp/: Contribution.md  UserManual_civetweb.md
examples/: CMakeLists.txt  fetch_parse.c  gui_skeleton.c  map_insert.c  slice_ref.c
include/: catomics.h  gui.h  hashtable.h  httpi.h  https.h  htypes.h  json.h  map.h  parson.h  stdatomic.h
include/Linux/: FileSelect.h  TextField.h
resources/: Info.plist  httpi.conf  res.rc  url.html  url.icns
src/: hashtable.c  http.c  json.c  map.c  parson.c
src/app/: url.c
src/lib/: httpi_authorize.c  httpi_internal.h  httpi_io.c  httpi_options.c  httpi_request.c  httpi_start.c  httpi_ws.c
src/lib/gui/: gui.c
src/lib/gui/Linux/: FileSelect.c  FileSelectP.h  Gridbox.c  GridboxP.h  TextField.c  TextFieldP.h
src/lib/mod/: mod_http2.c  mod_quickjs.c  mod_response.c  mod_zlib.c
tests/: CMakeLists.txt  test-hashmap.c  test-http_request.c  test-http_response.c  test-json.c  test-json_parser.c  test-parse_http.c  test-parse_multibad.c  test-parse_multipart.c  test-slice.c  test_assert.h
tests/multibody/: basic_multipart.txt
tests/units/: CMakeLists.txt  cgi_test.c  form.html  passfile  test-http_access_log.c  test-http_auth.c  test-http_connect.c  test-http_download.c  test-http_error.c  test-http_error_log.c  test-http_keep_alive.c  test-http_large_request.c  test-http_route.c  test-http_store_body.c  test-http_throttle.c  test-http_upload.c  test-http_websocket_connect.c  test-httpi_http_server.c  test-httpi_https_server.c  test-httpi_setup.c  test-httpi_units.c
tests/units/dir with spaces/: file with spaces.txt  r&d.txt
